src/App.css
.App {
  background: #232620;
  background-size: cover;
  background-position: center;
  width: 100%;
  height: 100%;
  transition: 100ms linear all;
}
.AppBackgroundOverlay {
  background: linear-gradient(to bottom, rgba(101, 88, 54, 0.68) 0%,rgba(49, 45, 19, 0.87) 100%);
}

.App .Content {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 64vw; /* 100 * 2.5/3.5 */
  max-width: 48vh; /* 80 * 2.5/3.5 */
}

.CardTitle,
.Card,
.Actions,
.Next {
  transition: 200ms linear opacity;
}

.CardState .CardTitle,
.CardState .Card,
.CardState .Actions {
  opacity: 1;
}
.CardState .Next {
  opacity: 0;
  pointer-events: none;
}
.NextState .CardTitle,
.NextState .Card,
.NextState .Actions {
  opacity: 0;
}
.NextState .Next {
  opacity: 1;
  pointer-events: inherit;
}

.WorldTitle {
  padding: 2vmin;
  font-size: 3vh;
  text-align: center;
}

.CardTitle {
  padding: 2vmin;
  padding-bottom: 4vmin;
  color: #dfe2d2;
  text-align: center;
}

.Next {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  text-align: center;
  width: 100%;
}
.Next > button {
  margin-top: 5vh;
}

